Limpieza de archivos

--- a/Digicom/index.html
+++ b/Digicom/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="">
-    <meta name="author" content="">    
+    <meta name="author" content="">
 
     <title>Condiciones de humedad y temperatura</title>
 
@@ -59,11 +59,11 @@
             </div>
             <div class="col-sm-6">
             	<span id="tiempos">
-                    <label for="periodo">Mostrar lecturas de los(as) últimos(as): </label>
+                  <label for="periodo">Mostrar lecturas de los(as) últimos(as): </label>
                     <select id="periodo" name="periodo">
-                        <option>24 horas</option>
+                        <option selected>24 horas</option>
                         <option>3 días</option>
-                        <option selected>7 días</option>
+                        <option>7 días</option>
                     </select>
 		</span>
             	<span>
@@ -114,13 +114,14 @@
 	<script src="https://code.jquery.com/jquery-3.3.1.min.js"
 			integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
 			crossorigin="anonymous"></script>
-    <script>window.jQuery || document.write('<script src="js/vendor/jquery.min.js"><\/script>')</script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  <script>window.jQuery || document.write('<script src="js/vendor/jquery.min.js"><\/script>')</script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.3/Chart.bundle.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.5.3/jspdf.min.js"
-    		integrity="sha256-gJWdmuCRBovJMD9D/TVdo4TIK8u5Sti11764sZT1DhI="
-            crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.5.3/jspdf.min.js"
+    	integrity="sha256-gJWdmuCRBovJMD9D/TVdo4TIK8u5Sti11764sZT1DhI="
+      crossorigin="anonymous">
+  </script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <!--<script src="https://github.com/Haixing-Hu/bootstrap3-ie10-viewport-bug-workaround/blob/master/ie10-viewport-bug-workaround.js"></script>-->
 	<!-- Own script -->	
