--- a/Lockers/index.html
+++ b/Lockers/index.html
@@ -53,46 +53,43 @@
       </header>      
     </div>
 
-    <div id="valor" align="center">
-        <svg viewBox="0 0 100 80" width="50%" xmlns="http://www.w3.org/2000/svg">
-            <!-- Rectángulo grande -->
-            <rect x="5" y="5" width="90" height="70"
-                   style="fill:blue; stroke:black; stroke-width:2; opacity:0.5" />
-            <!-- Rectángulos pequeños -->
-			<a href="area1.html"> 
-	            <rect x="12" y="42" width="35" height="30" class="svg" 
-    	              fill="green" /> Área 1
-			</a>
- 	        <text x="14" y="47" font-family="Verdana" font-size="5"
-                  fill="white" stroke="black" stroke-width="0.1">
-               Área 1
-            </text>
-			<a href="area2.html"> 
-	            <rect x="12" y="10" width="35" height="30" class="svg" 
-    	              fill="green" /> Área 2
-			</a>
- 	        <text x="14" y="15" font-family="Verdana" font-size="5"
-                  fill="white" stroke="black" stroke-width="0.1">
-               Área 2
-            </text>
-			<a href="area3.html"> 
-	            <rect x="55" y="10" width="35" height="30" class="svg" 
-	                  fill="green" /> Área 3
-			</a>
-            <text x="57" y="15" font-family="Verdana" font-size="5"
-               fill="white" stroke="black" stroke-width="0.1">
-               Área 3
-            </text>
-			<a href="area4.html"> 
-	            <rect x="55" y="42" width="35" height="30" class="svg" 
-    	              fill="green" /> Área 4
-			</a>
-            <text x="57" y="47" font-family="Verdana" font-size="5"
-               fill="white" stroke="black" stroke-width="0.1">
-               Área 4
-            </text>
-        </svg>
-    </div>
+    
+    <div class="container">
+      <svg viewBox="0 0 100 80" xmlns="http://www.w3.org/2000/svg" class="zonas">
+        <!-- Rectángulo grande -->
+        <rect x="5" y="5" width="90" height="70"
+          style="fill:blue; stroke:black; stroke-width:2; opacity:0.5" />
+        <!-- Rectángulos pequeños -->
+			  <a href="area1.html"> 
+	        <rect x="12" y="42" width="35" height="30" class="svg" fill="green" /> Área 1
+			  </a>
+ 	      <text x="14" y="47" font-family="Verdana" font-size="5"
+          fill="white" stroke="black" stroke-width="0.1">
+          Área 1
+        </text>
+			  <a href="area2.html"> 
+	        <rect x="12" y="10" width="35" height="30" class="svg" fill="green" /> Área 2
+			  </a>
+ 	      <text x="14" y="15" font-family="Verdana" font-size="5"
+          fill="white" stroke="black" stroke-width="0.1">
+          Área 2
+        </text>
+			  <a href="area3.html"> 
+	        <rect x="55" y="10" width="35" height="30" class="svg" fill="green" /> Área 3
+			  </a>
+        <text x="57" y="15" font-family="Verdana" font-size="5"
+          fill="white" stroke="black" stroke-width="0.1">
+          Área 3
+        </text>
+			  <a href="area4.html"> 
+	        <rect x="55" y="42" width="35" height="30" class="svg" fill="green" /> Área 4
+			  </a>
+        <text x="57" y="47" font-family="Verdana" font-size="5"
+          fill="white" stroke="black" stroke-width="0.1">
+          Área 4
+        </text>
+      </svg>
+  </div>
 
     <!-- Own script -->	
     <script type="text/javascript" src="js/svg.js"></script>
