--- a/Lockers/intro.html
+++ b/Lockers/intro.html
@@ -47,23 +47,52 @@
     <!-- TÍTULO + CARRUSEL
     ================================================== -->
 
-    <div class="signUp_user" id="info">
-      <div class="container_signUp_user" id="formData">
-          <h2>Iniciar sesión</h2>
-          <form name="login" method="post">
-              <input type="userName" name="userName" placeholder="Usuario">
-              <br>
-              <input type="password" name="password" placeholder="Contraseña">
-              <br>
-              <input id='enviar' type="submit" value="Ingresar">
-          </form>
-      </div>
-    </div>
-    <div class="signUp_user" id="infoPlus">
+    <div class="container">
+      <header>
+        <h2>Datos de temperatura y humedad</h2>
+      </header>      
     </div>
 
-  <!-- Own script -->	
-  <script src="js/login.js"></script>
+    
+    <div class="container">
+      <svg viewBox="0 0 100 80" xmlns="http://www.w3.org/2000/svg" class="zonas">
+        <!-- Rectángulo grande -->
+        <rect x="5" y="5" width="90" height="70"
+          style="fill:blue; stroke:black; stroke-width:2; opacity:0.5" />
+        <!-- Rectángulos pequeños -->
+			  <a href="area1.html"> 
+	        <rect x="12" y="42" width="35" height="30" class="svg" fill="green" /> Área 1
+			  </a>
+ 	      <text x="14" y="47" font-family="Verdana" font-size="5"
+          fill="white" stroke="black" stroke-width="0.1">
+          Área 1
+        </text>
+			  <a href="area2.html"> 
+	        <rect x="12" y="10" width="35" height="30" class="svg" fill="green" /> Área 2
+			  </a>
+ 	      <text x="14" y="15" font-family="Verdana" font-size="5"
+          fill="white" stroke="black" stroke-width="0.1">
+          Área 2
+        </text>
+			  <a href="area3.html"> 
+	        <rect x="55" y="10" width="35" height="30" class="svg" fill="green" /> Área 3
+			  </a>
+        <text x="57" y="15" font-family="Verdana" font-size="5"
+          fill="white" stroke="black" stroke-width="0.1">
+          Área 3
+        </text>
+			  <a href="area4.html"> 
+	        <rect x="55" y="42" width="35" height="30" class="svg" fill="green" /> Área 4
+			  </a>
+        <text x="57" y="47" font-family="Verdana" font-size="5"
+          fill="white" stroke="black" stroke-width="0.1">
+          Área 4
+        </text>
+      </svg>
+  </div>
+
+    <!-- Own script -->	
+    <script type="text/javascript" src="js/svg.js"></script>
 </body>
 
 </html>
